--- a/_posts/2025-1-9-test.md
+++ b/_posts/2025-1-9-test.md
@@ -1,7 +1,7 @@
 ---
-title: 如何把自己的网站从http变成https，设置https证书自动更新
+title: 如何把自己的网站从http变成https，设置https证书自动更新2
 categories: [教学]
-tags: [http,https]
+tags: [http,https,测试]
 ---
 
 
