--- a/_posts/2025-01-10-test.md
+++ b/_posts/2025-01-10-test.md
@@ -3,6 +3,7 @@ title: 测试文章
 categories: 分类1,分类2
 tags: [标签1, 标签2]
 postType: shuoshuo
+thumbnail: https://image.xukucha.cn/blog/jcc.jpg
 ---
 
 这是测试内容
