--- a/_posts/2025-01-10-test.md
+++ b/_posts/2025-01-10-test.md
@@ -1,7 +1,7 @@
 ---
 title: 测试文章
-categories: 分类1,分类2,分类3
-tags: [标签1, 标签2]
+categories: [分类1,分类2,分类3]
+tags: [标签1,标签2]
 postType: shuoshuo
 thumbnail: https://image.xukucha.cn/blog/jcc.jpg
 ---
