--- a/_posts/2025-01-10-test.md
+++ b/_posts/2025-01-10-test.md
@@ -5,18 +5,4 @@ tags: [标签1,标签2]
 thumbnail: https://image.xukucha.cn/blog/dota2.jpg
 ---
 
-这是测试内容123asdfasdf123
-
-
-asdfasdfasdf
-
-
-asdfaf
-
-
-asdfasdfasdfasdf
-asdfasdfasdf
-
-asdfasdf
-a
-asdfasdfasdf
+这是测试内容
