--- a/_posts/2025-04-08-web3(2).md
+++ b/_posts/2025-04-08-web3(2).md
@@ -6,288 +6,257 @@ tags: [区块链]
 
 # web3学习笔记(二)
 
-主要是学习solidity基础，学习WTF中Solidity 101前三节
+主要是学习solidity基础
 
-WTF传送门：[https://www.wtf.academy/zh/course](https://www.wtf.academy/zh/course)
+## 1.合约
 
-开发工具Remix：[https://remix.ethereum.org](https://remix.ethereum.org)
-
-
-
-## 1.Hello Web3
+Solidity 的代码都包裹在**合约**里面， 一份合约就是以太应币应用的基本模块， 所有的变量和函数都属于一份合约。
 
 ```solidity
+// 表示代码所使用的软件许可(license)
 // SPDX-License-Identifier: MIT
+
+// 表示使用的Solidity版本，这里`^0.8.21`表示的是不小于0.8.21版本
 pragma solidity ^0.8.21;
+
+// contract创建合约，并命名为`HelloWeb3`
 contract HelloWeb3{
+	// 声明了一个字符串，赋值为`Hello Web3!`
     string public _string = "Hello Web3!";
 }
 ```
 
-第1行注释表示代码所使用的软件许可(license)
-
-第2行表示使用的Solidity版本，这里`^0.8.21`表示的是不小于0.8.21版本
-
-第3行是合约部分，`contract`创建合约，并命名为`HelloWeb3`
-
-第4行是合约的内容，声明了一个字符串，赋值为`Hello Web3!`
 
 
+## 2.状态变量和整数
 
-总结，简单的了解了Remix
+上一步，我们做了一个合约的外壳，下面学习怎么使用变量
 
-
-
-## 2.值类型
-
-1.  **值类型(Value Type)** ：包括布尔型，整数型等等，这类变量赋值时候直接传递数值。
-2.  **引用类型(Reference Type)** ：包括数组和结构体，这类变量占空间大，赋值时候直接传递地址（类似指针）。
-3.  **映射类型(Mapping Type)** : Solidity中存储键值对的数据结构，可以理解为哈希表
-
-
-
-### 2.1.布尔型
-
-和JS很像，就是`等于`有一点不一样。布尔型是二值变量，取值为 `true` 或 `false`。
+**状态变量**是被永久地保存在合约中。也就是说它们被写入以太币区块链中，想象成写入一个数据库。
 
 ```solidity
-bool public _bool = true; // bool
-```
-
-- `!` （逻辑非）
-- `&&` （逻辑与，"and"）
-- `||` （逻辑或，"or"）
-- `==` （等于）
-- `!=` （不等于）
-
-```solidity
-// 布尔运算
-bool public _bool1 = !_bool; // 取非
-bool public _bool2 = _bool && _bool1; // 与
-bool public _bool3 = _bool || _bool1; // 或
-bool public _bool4 = _bool == _bool1; // 相等
-bool public _bool5 = _bool != _bool1; // 不相等
-```
-
-
-
-### 2.2.整型
-
-这个JS中没有，要注意一下。整型是 Solidity 中的整数，最常用的包括：
-
-```solidity
-// 整型
-int public _int = -1; // int 整数，包括负数
-uint public _uint = 1; // uint 无符号整数
-uint256 public _number = 20220330; // uint256 256位无符号整数
-```
-
-常用的整型运算符包括：
-
-- 比较运算符（返回布尔值）： `<=`， `<`，`==`， `!=`， `>=`， `>`
-- 算术运算符： `+`， `-`， `*`， `/`， `%`（取余），`**`（幂）
-
-```solidity
-// 整数运算
-uint256 public _number1 = _number + 1; // +，-，*，/
-uint256 public _number2 = 2**2; // 指数
-uint256 public _number3 = 7 % 2; // 取余数
-bool public _numberbool = _number2 > _number3; // 比大小
-```
-
-
-
-### 2.3.地址类型
-
-感觉是用来接受付款地址的一个变量，不知道是不是这么回事。
-
-地址类型(address)有两类：
-
-- 普通地址（address）: 存储一个 20 字节的值（以太坊地址的大小）。
-- payable address: 比普通地址多了 `transfer` 和 `send` 两个成员方法，用于接收转账。
-
-```solidity
-// 地址
-address public _address = 0x7A58c0Be72BE218B41C608b7Fe7C5bB630736C71;
-address payable public _address1 = payable(_address); // payable address，可以转账、查余额
-// 地址类型的成员
-uint256 public balance = _address1.balance; // balance of address
-```
-
-
-
-### 2.4.定长字节数组
-
-字节数组分为定长和不定长两种：
-
-- 定长字节数组: 属于值类型，数组长度在声明之后不能改变。根据字节数组的长度分为 `bytes1`, `bytes8`, `bytes32` 等类型。定长字节数组最多存储 32 bytes 数据，即`bytes32`。
-- 不定长字节数组: 属于引用类型（之后的章节介绍），数组长度在声明之后可以改变，包括 `bytes` 等。
-
-```solidity
-// 固定长度的字节数组
-bytes32 public _byte32 = "MiniSolidity"; 
-bytes1 public _byte = _byte32[0];
-```
-
-在上述代码中，字符串 `MiniSolidity` 以字节的方式存储进变量 `_byte32`。如果把它转换成 `16 进制`，就是：`0x4d696e69536f6c69646974790000000000000000000000000000000000000000`
-
-`_byte` 变量的值为 `_byte32` 的第一个字节，即 `0x4d`。
-
-
-
-### 2.5.枚举 enum
-
-这个感觉很熟悉了，有点类似TS中的枚举类型。
-
-枚举（`enum`）是 Solidity 中用户定义的数据类型。它主要用于为 `uint`(无符号整数) 分配名称，使程序易于阅读和维护。它与 `C 语言` 中的 `enum` 类似，使用名称来代替从 `0` 开始的 `uint`：
-
-```solidity
-// 用enum将uint 0， 1， 2表示为Buy, Hold, Sell
-enum ActionSet { Buy, Hold, Sell }
-// 创建enum变量 action
-ActionSet action = ActionSet.Buy;
-```
-
-`enum` 是一个比较冷门的数据类型，**几乎没什么人用**。
-
-
-
-## 3.函数
-
-先看一下 Solidity 中函数的形式:
-
-```solidity
-function <function name>([parameter types[, ...]]) {internal|external|public|private} [pure|view|payable] [virtual|override] [<modifiers>]
-[returns (<return types>)]{ <function body> }
-```
-
-1.  `function`：声明函数时的固定用法。要编写函数，就需要以 `function` 关键字开头。
-
-2.  `<function name>`：函数名。
-
-3.  `([parameter types[, ...]])`：圆括号内写入函数的参数，即输入到函数的变量类型和名称。
-
-4.  `{internal|external|public|private}`：函数可见性说明符，共有4种。
-
-   - `public`：内部和外部均可见。
-   - `private`：只能从本合约内部访问，继承的合约也不能使用。
-   - `external`：只能从合约外部访问（但内部可以通过 `this.f()` 来调用，`f`是函数名）。
-   - `internal`: 只能从合约内部访问，继承的合约可以用。
-
-   **注意 1**：合约中定义的函数需要明确指定可见性，它们没有默认值。
-
-    **注意 2**：`public|private|internal` 也可用于修饰状态变量(定义可参考[WTF Solidity 第5讲的相关内容](https://www.wtf.academy/zh/course/solidity101/[../05_DataStorage/readme.md#1-状态变量](https://github.com/AmazingAng/WTF-Solidity/tree/main/05_DataStorage#1-状态变量)))。`public`变量会自动生成同名的`getter`函数，用于查询数值。未标明可见性类型的状态变量，默认为`internal`。
-
-5.  `[pure|view|payable]`：决定函数权限/功能的关键字。`payable`（可支付的）很好理解，带着它的函数，运行的时候可以给合约转入 ETH。`pure` 和 `view` 的介绍见下一节。
-
-6.  `[virtual|override]`: 方法是否可以被重写，或者是否是重写方法。`virtual`用在父合约上，标识的方法可以被子合约重写。`override`用在自合约上，表名方法重写了父合约的方法。
-
-7.  `<modifiers>`: 自定义的修饰器，可以有0个或多个修饰器。
-
-8.  `[returns ()]`：函数返回的变量类型和名称。
-
-9.  `<function body>`: 函数体。
-
-**到底什么是 `Pure` 和`View`？**
-
-文档上罗里吧嗦说了一堆，我理解就是修改链上状态要付钱，用`Pure` 和`View`标记了不用付钱。
-
-在以太坊中，以下语句被视为修改链上状态：
-
-1. 写入状态变量。
-2. 释放事件。
-3. 创建其他合约。
-4. 使用 `selfdestruct`.
-5. 通过调用发送以太币。
-6. 调用任何未标记 `view` 或 `pure` 的函数。
-7. 使用低级调用（low-level calls）。
-8. 使用包含某些操作码的内联汇编。
-
-
-
-实践操作一下：
-
-### 3.1. pure 和 view
-
-我们在合约里定义一个状态变量 number，初始化为 5。
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.21;
-contract FunctionTypes{
-    uint256 public number = 5;
+contract Example {
+  // 这个无符号整数将会永久的被保存在区块链中
+  // 定义了a的类型为uint，赋值100
+  uint a = 100;
 }
 ```
 
-定义一个 `add()` 函数，每次调用会让 `number` 增加 1。
+### 2.1.uint
+
+`uint` 无符号数据类型， 指**其值不能是负数**。
+
+对于有符号的整数存在名为 `int` 的数据类型。
+
+`uint`实际上是`unint256`的简写，所以我们后面也会用到`unint8`，`unint16`等等。
+
+
+
+## 3.数学运算
+
+在 Solidity 中，数学运算很直观明了，与其它程序设计语言相同:
+
+- 加法: `x + y`
+- 减法: `x - y`,
+- 乘法: `x * y`
+- 除法: `x / y`
+- 取模 / 求余: `x % y` *(例如, `13 % 5` 余 `3`, 因为13除以5，余3)*
+- 乘方: `x**y`
 
 ```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.21;
-contract FunctionTypes{
-    // 定义一个uint256值为5
-    uint256 public number = 5;
+pragma solidity ^0.4.19;
 
-    // add方法，让number + 1 external：只能从合约外部访问（但内部可以通过 `this.f()` 来调用，`f`是函数名）。
-    function add() external{
-        number = number + 1;
-    }
-    
-    // pure标记的函数，不能读取number也不能修改number
-    function addPure(uint256 _number) external pure returns(uint256 new_number){
-        new_number = _number + 1;
-    }
-    
-    // view标记单函数，可以读取number但是也不能修改number
-    function addView() external view returns(uint256 new_number) {
-        new_number = number + 1;
-    }
-}
-```
+contract HelloWeb3 {
+    uint a = 16;
+    uint b = 10 ** a;
 
-![](https://image.xukucha.cn/blog/20250406221414.png)
-
-
-
-### 3.2. internal v.s. external
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.21;
-contract FunctionTypes{
-    // 定义一个uint256值为5
-    uint256 public number = 5;
-
-    // add方法，让number + 1 external：只能从合约外部访问（但内部可以通过 `this.f()` 来调用，`f`是函数名）。
-    function add() external{
-        number = number + 1;
-    }
-
-    // internal: 内部函数 internal：只能从合约内部访问，继承的合约可以用。
-    function minus() internal {
-        number = number - 1;
-    }
-
-    // 合约内的函数可以调用内部函数
-    function minusCall() external {
-        minus();
-    }
 }
 ```
 
 
 
-### 3.3. payable
+## 4.结构体
 
-看不懂没关系，我tm也看不懂这什么跟什么，大概知道是这个意思
+如果需要更加复杂的数据类型，就需要使用到结构体，个人感觉类似JS中或者其他语言中的类和对象。
 
 ```solidity
-// payable: 递钱，能给合约支付eth的函数
-function minusPayable() external payable returns(uint256 balance) {
-    minus();    
-    balance = address(this).balance;
+struct Person {
+	uint age;
+	string name;
 }
 ```
 
-![](https://image.xukucha.cn/blog/20250408003354.png)
+
+
+## 5.数组
+
+跟其他语言一样，`solidity`也有数组，不过分两种：静态数组和动态数组。
+
+```solidity
+// 固定长度为2，类型为uint
+uint[2] array1;
+// 固定长度为5，类型为string
+string[5] array2;
+// 动态数组，可以动态添加元素
+uint[] array3;
+// 甚至还有机构体数组
+Person[] array4; 
+```
+
+### 5.1.公共数组
+
+可以使用`public`修饰数组，其他合约可以从这个数组读取数据，但是不能写入数据。
+
+```solidity
+struct Person {
+	uint age;
+	string name;
+}
+Person[] public people;
+```
+
+
+
+## 6.定义函数
+
+```solidity
+// 这里变量用了_做开头，但这个不是语法要求，是一种习惯
+function foo(string _name, uint _age){
+
+}
+```
+
+
+
+## 7.使用结构体和数组
+
+```solidity
+struct Person {
+	uint age;
+	string name;
+}
+Person[] public peopleList;
+// 创建一个新的Person:
+Person person1 = Person(172, "zs");
+
+// 将新创建的person1添加进people数组:
+peopleList.push(person1);
+```
+
+当然也可以把创建和`push`合为一步
+
+```solidity
+peopleList.push(Person(172,"zs"))
+```
+
+结合一下上面写的函数，定义一个函数，函数里面创造了一个`People`，然后在`peopleList`的尾部加入这个`People`。
+
+```solidity
+function foo(string _name, uint _age){
+	// 创建的People的参数由函数传入
+	peopleList.push(Person(_age,_name))
+}
+```
+
+
+
+## 8.私有/公共函数
+
+在合约中定义的函数默认为`public`的，也就是公共的。这就意味着其他的合约也可以调用这个函数，这样是不安全的。所以要有一个习惯，这个函数确定是公共的才把他设置为`public`。
+
+公共的对立面就是私有，那么如何定义一个私有的函数呢？
+
+```solidity
+uint[] numbers;
+
+// 在函数名字后面使用private关键字，就能把他设置为私有
+// 私有函数的名字用_开头，这是一种习惯
+function _addToArray(uint _number) private {
+  numbers.push(_number);
+}
+```
+
+
+
+## 9.函数的更多属性
+
+### 9.1.返回值
+
+```solidity
+// 函数如果有返回值，有语法规定
+// returns 定义了返回值的类型为 string
+string str = "hello";
+function sayHello() public returns (string) {
+	return str;
+}
+```
+
+### 9.2函数的修饰符
+
+上面的`sayHello`没有改变任何状态，他只是返回了`str`，这种情况下我们可以把函数定义为`view`，这个意思就是他只能读取状态而不能改变状态。
+
+```solidity
+function sayHello() public view returns (string) {
+	return str;
+}
+```
+
+此外，还有另一个修饰符`pure`，这个表示函数没有读取也没有修改状态。
+
+```solidity
+function _multiply(uint a, uint b) private pure returns (uint) {
+	return a * b;
+}
+```
+
+
+
+## 10.Keccak256 和 类型转换
+
+### 10.1.Keccak256
+
+```solidity
+// 有一个方法是把一个字符串转换为一个256位的16进制数字
+keccak256("aaab"); 
+//6e91ec6b618bb462a4a6ee5aa2cb0e9cf30f7a052bb467b0ba58b8748c00d2e5
+```
+
+不过需要注意的是，在区块链中**安全**地产生一个随机数是很困难的事情，这个方法是不安全的。
+
+### 10.2.类型转换
+
+```solidity
+uint8 a = 5;
+uint b = 6;
+// 这样写会报错，因为a * b返回的是uint。
+// 这个类似TS中的类型报错一样
+uint8 c = a * b;
+// 转换一下b的类型，这样就可以了
+uint8 c = a * uint8(b);
+```
+
+
+
+## 11.事件
+
+事件是合约和区块链通讯的一种机制。前端要监听某些事件然后做出处理。
+
+```solidity
+// 使用event建立事件
+event AddEvent(uint x, uint y, uint res);
+
+function add(uint _x, uint _y) public {
+	uint res = _x + _y;
+	// 触发事件
+	AddEvent(_x, _y, res);
+	return res;
+}
+```
+
+```js
+// 然后前端就可以监听这个事情，做出一些处理
+YourContract.AddEvent(function(err,res)){
+                      
+}
+```
 
